name:                btree-algorithm
version:             0.1.0.1
homepage:            https://github.com/hvpaiva/btree-algorithm#readme
license:             BSD3
license-file:        LICENSE
synopsis:            Concrete data type for a B tree algorithm.
description:         Defines a B-Tree algorithm implementation, with operations with O(log(n)) complexity.
author:              Highlander Paiva
maintainer:          hvpaiva@icloud.com
bug-reports:         https://github.com/hvpaiva/btree-algorithm/issues/new?assignees=&labels=&template=bug_report.md&title=
copyright:           2022 (c) Highlander Paiva
category:            src.Data, Tree
stability:           experimental
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/hvpaiva/btree-algorithm.git

library
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules: Data.BTree
  ghc-options:     -Wall
  build-depends:
    base >= 4.9 && < 5
